# poor_server

./: CMakeLists.txt  README.md  main.cpp  poor.sql
data/: packet.cpp  packet.h
data/logs/: logs.cpp  logs.h
data/user_uploads/: useruploads.cpp  useruploads.h
server/: server_network.cpp  server_network.h
user/: user_login_account_manager.cpp  user_login_account_manager.h
